<resources>
    <string name="app_name">Inventory</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="phone">Phone</string>
    <string name="error_saving_product">Error with saving the product</string>
    <string name="product_saved">Product saved</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="error_deleting_product">Error with deleting product</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="all_field_required">All fields are required !</string>
    <string name="price_greater_then_zero">Price cannot be 0 !</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="required_field">*required</string>
    <string name="empty_db_title">The database is empty!</string>
    <string name="empty_db_info">Click on + button to add some products</string>
    <string name="sell">Sell</string>
</resources>
