<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_general">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/name_header_padding"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="Some Thing" />

    <TextView
        android:id="@+id/price_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:text="@string/price"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginLeft="@dimen/margin_general"
        android:layout_toRightOf="@id/quantity_header"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="24.99" />

    <TextView
        android:id="@+id/quantity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_header"
        android:text="@string/quantity"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/quantity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price_header"
        android:layout_marginLeft="@dimen/margin_general"
        android:layout_toRightOf="@id/quantity_header"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="55" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:focusable="false"
        android:text="@string/sell" />

    <TextView
        android:id="@+id/out_of_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/product_name"
        android:text="@string/out_of_stock"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorAccent" />

</RelativeLayout>